--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
     "llamaindex": "0.0.34",
     "lucide-react": "^0.263.1",
     "next": "13.5.3",
+    "openai": "^4.61.0",
     "postcss": "8.4.30",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "prettier": "^3.0.3",
